Added Grails build to Gradle, you can now run (for example) 'gradle check' to do the grails tests (and soon, the JS tests too). All the old ways of doing things still work too